<?xml version="1.0" encoding="utf-8"?>
<!--THIS FILE IS N OT IN USE
I USED MATERIAL NAVIGATION DRAWER AT FIRST INSTEAD OF MAKING CUSTOM NAVIGATION DRAWER,
BUT BECAUSE OF THE SEARCH ICON COLOR IN THE DEFAULT TOOLBAR THAT I COULD NOT CHANGED,
I MADE CUSTOM DRAWER-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group>
		<item android:id="@+id/explore"
			android:icon="@mipmap/explore"
			android:title="@string/explore"/>
		
		<item android:id="@+id/live_char"
			android:icon="@mipmap/live_chat"
			android:title="@string/live_chat" />
		
		<item android:id="@+id/gallery"
			android:icon="@mipmap/gallery"
			android:title="@string/gallery" />
		
		<item android:id="@+id/wish_list"
			android:icon="@mipmap/wish_list"
			android:title="@string/wish_list" />
		
		<item android:id="@+id/magazine"
			android:icon="@mipmap/magazine"
			android:title="@string/e_magazine" />
	</group>
</menu>