<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="20dp"
	android:background="@drawable/card_shadow_background"
	android:orientation="vertical">
	<ImageView
		android:id="@+id/iv_image"
		android:layout_width="match_parent"
		android:layout_height="@dimen/image_height"
		android:scaleType="fitXY"
		android:src="@mipmap/ic_launcher"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/news_padding"
		android:orientation="vertical">
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/title_text"
			android:textColor="@color/titleColor"
			android:textSize="@dimen/title"/>
		<TextView
			android:id="@+id/tv_author"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/news_source"
			android:textColor="@color/smallTextColor"
			android:textSize="@dimen/small_text"/>
		<TextView
			android:id="@+id/tv_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/news_date"
			android:textColor="@color/smallTextColor"
			android:textSize="@dimen/small_text"
			android:gravity="end"/>
	</LinearLayout>
</LinearLayout>