<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Activities.NewsDetailsActivity">
	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<android.support.design.widget.AppBarLayout
			android:id="@+id/app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="0dp">
			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:elevation="@dimen/elevation"
				app:contentInsetStart="0dp"
				app:contentInsetEnd="0dp"
				android:background="@color/colorPrimary">
				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:paddingStart="5dp"
					android:paddingEnd="5dp">
					<ImageView
						android:id="@+id/iv_back"
						app:layout_constraintHorizontal_weight="0.15"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:src="@mipmap/back"
						android:onClick="goBack"
						app:layout_constraintHorizontal_chainStyle="spread_inside"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/et_search"/>
					<TextView
						android:id="@+id/tv_act_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/company_name"
						android:textColor="@color/white"
						android:textSize="@dimen/title"
						android:layout_marginStart="10dp"
						app:layout_constraintStart_toEndOf="@+id/iv_back"
						app:layout_constraintTop_toTopOf="@+id/iv_back"
						app:layout_constraintBottom_toBottomOf="@+id/iv_back"/>
					<ImageView
						android:id="@+id/iv_search"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@mipmap/search_icon"
						android:onClick="startSearch"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"/>
					<!--<ImageView-->
					<!--android:id="@+id/iv_search"-->
					<!--android:layout_width="wrap_content"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:src="@mipmap/search_icon"-->
					<!--android:onClick="startSearch"-->
					<!--app:layout_constraintEnd_toEndOf="parent"-->
					<!--app:layout_constraintTop_toTopOf="parent"-->
					<!--app:layout_constraintBottom_toBottomOf="parent"/>-->
				</android.support.constraint.ConstraintLayout>
			</android.support.v7.widget.Toolbar>
		</android.support.design.widget.AppBarLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			android:orientation="vertical"
			android:padding="20dp">
			<android.support.constraint.ConstraintLayout
				android:id="@+id/cl_news_details"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/card_shadow_background"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent">
				<ImageView
					android:id="@+id/iv_image"
					android:layout_width="match_parent"
					android:layout_height="200dp"
					android:scaleType="fitXY"
					android:src="@mipmap/ic_launcher"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent" />
				<TextView
					android:id="@+id/tv_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/date_text"
					android:textColor="@color/white"
					android:background="@color/transBlack"
					android:padding="2dp"
					android:textSize="@dimen/very_small_text"
					android:layout_marginEnd="10dp"
					android:layout_marginBottom="25dp"
					app:layout_constraintEnd_toEndOf="@+id/iv_image"
					app:layout_constraintBottom_toBottomOf="@+id/iv_image"/>
				<LinearLayout
					android:id="@+id/ll_news_details"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="15dp"
					app:layout_constraintTop_toBottomOf="@+id/iv_image"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent">
					<TextView
						android:id="@+id/tv_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/title_text"
						android:textColor="@color/titleColor"
						android:textSize="@dimen/title"/>
					<TextView
						android:id="@+id/tv_author"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="3dp"
						android:text="@string/news_source"
						android:textColor="@color/smallTextColor"
						android:textSize="@dimen/small_text"/>
					<TextView
						android:id="@+id/tv_description"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="3dp"
						android:text="@string/long_text"
						android:textColor="@color/smallTextColor"
						android:textSize="@dimen/small_text"/>
				</LinearLayout>
			</android.support.constraint.ConstraintLayout>
			
			<Button
				android:id="@+id/btn_open_website"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="Open Website"
				android:textColor="@color/white"
				android:background="@color/colorPrimaryDark"
				app:layout_constraintTop_toBottomOf="@+id/cl_news_details"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"/>
		</LinearLayout>
		
	</android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>